[package]
name = "attestation"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"

[lib]
path = "src/lib.rs"

# [dependencies.dharitri-sc]              #thrivenee
# version = "0.45.1"

# [dev-dependencies.dharitri-sc-scenario]
# version = "0.45.1"

[dependencies.dharitri-sc]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.45.1/framework/base"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.45.1/framework/scenario/"