[package]
name = "escrow"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/escrow.rs"

[dependencies.dharitri-sc]  
version = "1.13.6"
# [dependencies.dharitri-sc]
# path = "/home/saikumar/Dugong/github-repos/github-teja/my_works/rs-sdks/drt-rs-sdk-1.13.6/framework/base"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.dharitri-sc-scenario]  
 version = "1.13.6"
#[dev-dependencies.dharitri-sc-scenario]
#path = "/home/saikumar/Dugong/github-repos/github-teja/my_works/rs-sdks/drt-rs-sdk-1.13.6/framework/scenario"

[workspace]
members = [
    ".",
    "meta",
]
