[[bin]]
name = "basic-interact"
path = "src/deleg_interact.rs"

[package]
name = "delegation-interact"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.dharitri-sc]
version = "=1.16.0"

[dependencies.dharitri-sc-snippets]
version = "=1.16.0"

[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"
