[package]
name = "digital-cash"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/digital_cash.rs"

# [dependencies.dharitri-sc]             # varsha#
# version = "0.43.3"

# [dev-dependencies.dharitri-sc-scenario]
# version = "0.43.3"

[dependencies.dharitri-sc]
path = "/home/saikumar/Dugong/github-repos/github-teja/my_works/rs-sdks/drt-rs-sdk-0.43.3/framework/base"

[dev-dependencies.dharitri-sc-scenario]
path = "/home/saikumar/Dugong/github-repos/github-teja/my_works/rs-sdks/drt-rs-sdk-0.43.3/framework/scenario"
