[package]
name = "digital-cash"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/digital_cash.rs"

[dependencies.dharitri-sc]             # varsha#
version = "=1.4.6"

[dev-dependencies.dharitri-sc-scenario]
version = "=1.4.6"

# [dependencies.dharitri-sc]
# path = "/home/dugong/Desktop/teja-work/my_rust-works/rs-sdks/rs-sdks-dharitri-versions/drt-rs-sdk-1.4.6/framework/base"

# [dev-dependencies.dharitri-sc-scenario]
# path = "/home/dugong/Desktop/teja-work/my_rust-works/rs-sdks/rs-sdks-dharitri-versions/drt-rs-sdk-1.4.6/framework/scenario"
