[package]
name = "composable-tasks"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/scenario"

[dev-dependencies.pausable]
git = "https://github.com/TerraDharitri/drt-sc-exchange"
tag = "v0.0.3"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/pausable"

[dependencies.dharitri-sc]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/base"

[dependencies.dharitri-sc-modules]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/contracts/modules"

[dependencies.dharitri-sc-wrewa-swap]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/contracts/core/wrewa-swap"

[dependencies.farm]
git = "https://github.com/TerraDharitri/drt-sc-exchange"
tag = "v0.0.3"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/TerraDharitri/drt-sc-exchange"
tag = "v0.0.3"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm-with-locked-rewards"

[dependencies.pair]
git = "https://github.com/TerraDharitri/drt-sc-exchange"
tag = "v0.0.3"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/pair"

[dependencies.router]
git = "https://github.com/TerraDharitri/drt-sc-exchange"
tag = "v0.0.3"
#path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/router"