[package]
name = "farm-extra-rewards-wrapper"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm"

[dependencies.farm-with-locked-rewards]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/dex/farm-with-locked-rewards"

[dependencies.config]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/config"

[dependencies.farm_token]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/farm_token"

[dependencies.rewards]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/rewards"

[dependencies.contexts]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/contexts"

[dependencies.farm_base_impl]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/farm/farm_base_impl"

[dependencies.token_send]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/token_send"

[dependencies.pausable]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/pausable"

[dependencies.permissions_module]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/permissions_module"

[dependencies.common_structs]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/common_structs"

[dependencies.fixed-supply-token]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/traits/fixed-supply-token"

[dependencies.mergeable]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/traits/mergeable"

[dependencies.unwrappable]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/traits/unwrappable"

[dependencies.math]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/math"

[dependencies.utils]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/utils"


[dependencies.auto-farm]
path = "../auto-farm"

[dependencies.dharitri-sc]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/base"
features = ["dcdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/contracts/modules"

[dependencies.read_external_storage]
path = "../common/modules/read_external_storage"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.tests-common]
path = "../tests-common"
features = ["enable-tests-common"]

[dev-dependencies.dharitri-sc-scenario]
version = "=1.11.10"
#path = "/home/dugong/Desktop/teja-work/teja-work/my_works/rs-sdks/drt-rs-sdk-0.50.5/framework/scenario"

[dev-dependencies.energy-factory]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/locked-asset/energy-factory"

[dev-dependencies.sc_whitelist_module]
#git = "https://github.com/TerraDharitri/drt-sc-exchange"
#varsha rev = "c061a85"
path = "/home/dugong/Desktop/teja-work/my_works/rs-repos-verified-completed/drt-sc-exchange-3.0.7/drt-sc-exchange-3.0.7/common/modules/sc_whitelist_module"
